[gd_scene load_steps=9 format=3 uid="uid://cdjp0wu1flrga"]

[ext_resource type="Texture2D" uid="uid://chj16sm4ydy" path="res://sprites/title_final.png" id="1_4vhds"]
[ext_resource type="Script" uid="uid://o230ys0crrsu" path="res://scripts/title_screen.gd" id="1_vnmx4"]
[ext_resource type="Texture2D" uid="uid://ct15vmettdv30" path="res://sprites/exit.png" id="2_gkjui"]
[ext_resource type="AudioStream" uid="uid://d10kfv43iw0oc" path="res://sounds/BAL_MainMenu.wav" id="4_2tqpf"]
[ext_resource type="Texture2D" uid="uid://btgpqxm5nrjw7" path="res://sprites/title_start.png" id="4_r7fo5"]
[ext_resource type="Texture2D" uid="uid://boi33jo6ck6aq" path="res://sprites/title_howto.png" id="5_j075n"]
[ext_resource type="AudioStream" uid="uid://cyx17rwt1jqaf" path="res://sounds/mus_Intro.wav" id="5_vuisl"]
[ext_resource type="FontFile" uid="uid://0i8uc3fd1bpt" path="res://fonts/COMIC.ttf" id="6_4ykrc"]

[node name="Title Screen" type="Node2D"]
script = ExtResource("1_vnmx4")

[node name="Background" type="ColorRect" parent="."]
offset_left = -158.0
offset_top = -184.0
offset_right = 2002.0
offset_bottom = 1177.0

[node name="Title" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 864.0

[node name="Background" type="Sprite2D" parent="Title"]
position = Vector2(240, 0)
scale = Vector2(2.25, 2.25)
texture = ExtResource("1_4vhds")
centered = false

[node name="Buttons" type="Control" parent="Title"]
layout_mode = 3
anchors_preset = 0

[node name="Exit" type="TextureButton" parent="Title/Buttons"]
layout_mode = 0
offset_top = 824.0
offset_right = 64.0
offset_bottom = 888.0
scale = Vector2(4, 4)
texture_normal = ExtResource("2_gkjui")

[node name="Start" type="TextureButton" parent="Title/Buttons"]
layout_mode = 0
offset_left = 1209.0
offset_top = 991.0
offset_right = 1323.0
offset_bottom = 1035.0
scale = Vector2(2, 2)
texture_normal = ExtResource("4_r7fo5")

[node name="How to play" type="TextureButton" parent="Title/Buttons"]
layout_mode = 0
offset_left = 1446.0
offset_top = 991.0
offset_right = 1683.0
offset_bottom = 1035.0
scale = Vector2(2, 2)
texture_normal = ExtResource("5_j075n")

[node name="Button" type="Button" parent="Title/Buttons"]
layout_mode = 0
offset_left = 1543.0
offset_top = 632.0
offset_right = 1837.0
offset_bottom = 754.0
theme_override_font_sizes/font_size = 32
text = "test button 001"

[node name="Mouse" type="Control" parent="Title"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Text" type="Label" parent="Title/Mouse"]
layout_mode = 0
offset_left = 1472.0
offset_top = 858.0
offset_right = 1899.0
offset_bottom = 925.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_4ykrc")
theme_override_font_sizes/font_size = 48
text = "Mouse Sensitivity: "

[node name="Slider" type="HSlider" parent="Title/Mouse"]
layout_mode = 0
offset_left = 1408.0
offset_top = 931.0
offset_right = 1654.0
offset_bottom = 960.0
scale = Vector2(2, 2)
max_value = 3.0
step = 0.01
value = 0.3

[node name="HowTo" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Texts" type="Label" parent="HowTo"]
layout_mode = 0
offset_left = 156.0
offset_right = 1812.0
offset_bottom = 897.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_4ykrc")
theme_override_font_sizes/font_size = 33
text = "Controls:
WASD - Move
Mouse - Look around
Left Click - Pick up objects, open doors, other interactions
Right Click - Use selected item
Scroll Wheel - Change item selection
Shift - Run (Watch your stamina!)
Space bar - Look behind you and wave goodbye to your friends!



Story:
Oh noes! School is out, but your friend has a problem! He left all his noteboos in school, but doesn't have
time to go get them, because if he does he'll be late for eating parcitce. To help him out, you have to go
back in the school and find all 7 of his notebooks for him. It won't be easy though! Baldi loves challenging
his students with fun trivia problems whenever he can! Each time you find a notebook, you'll have to answer
some questions. Answer all three correctly, and you will earn a prize! Find all 7 notebooks, and then exit the
school, to win!"
horizontal_alignment = 1

[node name="Back" type="Button" parent="HowTo"]
layout_mode = 0
offset_left = 830.0
offset_top = 955.0
offset_right = 1133.0
offset_bottom = 1073.0
theme_override_fonts/font = ExtResource("6_4ykrc")
theme_override_font_sizes/font_size = 64
text = "Back"

[node name="Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_2tqpf")
autoplay = true

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_vuisl")
autoplay = true

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[connection signal="pressed" from="Title/Buttons/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Title/Buttons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Title/Buttons/How to play" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="Title/Buttons/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HowTo/Back" to="." method="_on_back_pressed"]
